added status check
